# cc-switch-ui

./: .gitignore  README.md  app.py  index.html  pyproject.toml  run.sh
src/cc_switch_ui/: __init__.py  app.py  cli_manager.py  config.py  index.html  process.py  server.py
tests/: test_app.py  test_assets.py  test_cli_manager.py  test_config.py  test_process.py  test_server.py
