[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-switch-ui"
version = "0.1.2"
description = "CC Switch Web UI —— Claude Code 多供应商 / 多账号管理面板"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "cliecy"},
]
keywords = [
    "claude-code",
    "claude",
    "anthropic",
    "deepseek",
    "kimi",
    "glm",
    "qwen",
    "openrouter",
    "web-ui",
    "management",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]
dependencies = [
    "flask>=3.1",
]

[project.scripts]
cc-switch-ui = "cc_switch_ui.app:main"

[project.urls]
Homepage = "https://github.com/cliecy/cc-switch-ui"
Issues = "https://github.com/cliecy/cc-switch-ui/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_switch_ui"]

[tool.hatch.build.targets.sdist]
include = [
    "src/cc_switch_ui/**/*.py",
    "src/cc_switch_ui/index.html",
    "README.md",
    "run.sh",
]
